2006-06-24 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* dfu-programmer.spec.in: Update the supported chips
	* NEWS: Updated the latest news about the 0.3.0 release
	* src/arguments.c: Adjusted the 8051 based chip memory sizes to
	  be accurate, and the top memory address is calculated based off
	  of the memory size.
	* src/arguments.h: Added top_memory_address to differentiate the
	  memory size and top memory address.  This resolves my question
	  about the +1 offset.
	* src/atmel.c: Fix a bug where the last byte of memory was not being
	  transferred from the device for validation purposes.
	* src/commands.c: Updated to use memory_size and top_memory_address
	  depending on which value is needed, instead of using one value
	  to serve both purposes.

2006-06-24 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* dfu-programmer.spec.in: Update the supported chips
	* README: Added an instruction about building the source from CVS.

2006-06-19 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* AUTHORS: Updated David Brownell's contributions - which makes
	  up almost this entire check-in!
	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.3.0 release
	* src/arguments.c: Added the new targets, made the target names
	  case insensitive, added a version command line "command", updated
	  the mechanism for matching commands, and updated debugging output.
	* src/arguments.h: Added new targets, and cleaned the arguments
	  structure up a bit.
	* src/atmel.c: Applied general cleanup, matched the atmel.h
	  interfaces and added an AVR a configuration reading function.
	* src/atmel.h: Updated the interface to allow for 8051 vs AVR
	  differences.  This also starts the use of stdint.h values.
	* src/commands.c: Updated to a more standard debugging system and
	  added command checking for 8051 vs AVR differences.  There is
	  an open question about why we switch between args.memory_size